@@ -428,8 +428,7 @@ public class ManualPsaIntegration {
                 "https://openlattice-media-storage.s3.us-gov-west-1.amazonaws.com" );
         Map<Flight, Payload> flights = new HashMap<>( 1 );
         flights.put( psaFlight, payload );
-
-        missionControl.prepare( flights, false, ImmutableList.of(), ImmutableSet.of() ).launch( 10000 );
+        missionControl.prepare( flights, false, List.of(), Set.of() ).launch( 150 );
         MissionControl.succeed();
     }
 
